--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "child_process": "^1.0.2",
     "fs-extra": "^9.0.1",
     "replace-in-file": "^6.1.0"
   }
