--- a/childtemplate/contactactivity.yaml
+++ b/childtemplate/contactactivity.yaml
@@ -1,4 +1,4 @@
-/contacts/{contactId}/activity:
+/contact/{contactId}/activity:
   post:
     tags: ["Contact Activity"]
     description: create Contact Activity
@@ -77,7 +77,7 @@
       200:
         description: Contact Activity      
         
-/contacts/{contactId}/activity/{activityId}:
+/contact/{contactId}/activity/{activityId}:
   get:
     tags: ["Contact Activity"]
     description: Contact Activity
