--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "child_process": "^1.0.2",
     "fs-extra": "^9.0.1",
+    "ngx-clipboard": "^14.0.1",
     "replace-in-file": "^6.1.0",
     "sequelize-cli": "^6.2.0"
   }
