--- a/template/contact.yaml
+++ b/template/contact.yaml
@@ -131,66 +131,67 @@
       - name: field4
         description: field4 of the contact.
         in: formData
-        required: true
+        required: false
         type: string
       - name: field5
         description: field5 of the contact.
         in: formData
-        required: true
+        required: false
         type: string
       - name: field6
         description: field6 of the contact.
         in: formData
-        required: true
+        required: false
         type: string
       - name: field4
         description: field4 of the contact.
         in: formData
-        required: true
+        required: false
         type: string
       - name: field5
         description: field5 of the contact.
         in: formData
-        required: true
+        required: false
         type: string
       - name: field6
         description: field6 of the contact.
         in: formData
-        required: true
+        required: false
         type: string
       - name: field7
         description: field7 of the contact.
         in: formData
-        required: true
+        required: false
         type: string
       - name: field8
         description: field8 of the contact.
         in: formData
-        required: true
+        required: false
         type: string
       - name: field9
         description: field9 of the contact.
         in: formData
-        required: true
+        required: false
         type: string
       - name: field10
         description: field10 of the contact.
         in: formData
-        required: true
+        required: false
         type: string
       - name: field11
         description: field11 of the contact.
         in: formData
-        required: true
+        required: false
         type: string
       - name: field12
         description: field12 of the contact.
         in: formData
-        required: true
+        required: false
         type: string
       
     responses:
-      200:   
+      200:
+        description: contact   
 
   delete:
     tags: ["Contact"]
