--- a/childtemplate/contactactivity.yaml
+++ b/childtemplate/contactactivity.yaml
@@ -30,6 +30,76 @@
         in: formData
         required: true
         type: string
+      - name: field7
+        description: field7 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field8
+        description: field8 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field9
+        description: field9 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field10
+        description: field10 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field11
+        description: field11 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field12
+        description: field12 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field13
+        description: field13 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field14
+        description: field14 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field15
+        description: field15 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field16
+        description: field16 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field17
+        description: field17 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field18
+        description: field18 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field19
+        description: field19 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field20
+        description: field20 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
      
      
     responses:
@@ -118,6 +188,76 @@
         description: field6 of the ContactActivity.
         in: formData
         required: false
+        type: string
+      - name: field7
+        description: field7 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field8
+        description: field8 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field9
+        description: field9 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field10
+        description: field10 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field11
+        description: field11 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field12
+        description: field12 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field13
+        description: field13 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field14
+        description: field14 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field15
+        description: field15 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field16
+        description: field16 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field17
+        description: field17 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field18
+        description: field18 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field19
+        description: field19 of the ContactActivity.
+        in: formData
+        required: true
+        type: string
+      - name: field20
+        description: field20 of the ContactActivity.
+        in: formData
+        required: true
         type: string
      
     responses:
